--- a/product-page/ProductPage.html
+++ b/product-page/ProductPage.html
@@ -146,163 +146,176 @@
 
           <label for="product-search" class="txt-search">Busqueda</label>
           <input type="text" id="product-search" name="product-search" class="lbl-search">
-          
+
         </div>
       </nav>
 
     </section>
 
-    <div class="product-cards">
-      <div class="group-cards-2">
-        <div class="card-homepage">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card0.png" />
-        </div>
-        <div class="card-homepage2">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card1.png" />
-        </div>
-        <div class="card-homepage3">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card2.png" />
-        </div>
-        <div class="card-homepage4">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card3.png" />
-        </div>
-        <div class="card-homepage5">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card4.png" />
-        </div>
-        <div class="card-homepage6">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card5.png" />
-        </div>
-        <div class="card-homepage7">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card6.png" />
-        </div>
-        <div class="card-homepage8">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card7.png" />
-        </div>
-        <div class="card-homepage9">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card8.png" />
-        </div>
-        <div class="card-homepage10">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card9.png" />
-        </div>
-        <div class="card-homepage11">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card10.png" />
-        </div>
-        <div class="card-homepage12">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card11.png" />
-        </div>
-        <div class="section-nav-product">
-          <div class="divider"></div>
-          <div class="btn-categoria">
-            <div class="txt-categoria">Categoria</div>
-          </div>
-          <div class="btn-filtrar">
-            <div class="txt-filtrar">Filtrar</div>
-          </div>
-          <div class="txt-title-category">Granos</div>
-        </div>
-      </div>
-      <div class="group-cards-1">
-        <div class="card-homepage">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card12.png" />
-        </div>
-        <div class="card-homepage2">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card13.png" />
-        </div>
-        <div class="card-homepage3">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card14.png" />
-        </div>
-        <div class="card-homepage4">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card15.png" />
-        </div>
-        <div class="card-homepage5">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card16.png" />
-        </div>
-        <div class="card-homepage6">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card17.png" />
-        </div>
-        <div class="card-homepage7">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card18.png" />
-        </div>
-        <div class="card-homepage8">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card19.png" />
-        </div>
-        <div class="card-homepage9">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card20.png" />
-        </div>
-        <div class="card-homepage10">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card21.png" />
-        </div>
-        <div class="card-homepage11">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card22.png" />
-        </div>
-        <div class="card-homepage12">
-          <div class="txt-name-card">BARRILETE</div>
-          <div class="txt-price-card">$5.99 / lb</div>
-          <img class="img-card" src="img-card23.png" />
-        </div>
-        <div class="section-nav-product">
-          <div class="divider"></div>
-          <div class="btn-categoria">
-            <div class="txt-categoria">Categoria</div>
-          </div>
-          <div class="btn-filtrar">
-            <div class="txt-filtrar">Filtrar</div>
-          </div>
-          <div class="txt-title-category">Granos</div>
-        </div>
-      </div>
-    </div>
+    <section class="product-cards">
 
+      <div class="section-nav-product">
+        <h2 class="txt-title-category">Granos</h2>
+        <div class="contenedor-btn">
+          <button id="btnCategoria" class="btn-categoria">Categoria</button>
+          <button id="btnFiltrar" class="btn-categoria">Filtrar</button>
+        </div>
+      </div>
+
+
+      <div class="contenido">
+        <div class="mostrador" id="mostrador">
+          <div class="fila">
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+          </div>
+          <div class="fila">
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+            <div class="item" onclick="cargar(this)">
+              <div class="contenedor-foto">
+                <img src="img/img-card0.png" alt="">
+              </div>
+              <div class="contenedor-texto">
+                <p class="descripcion">Barrilete</p>
+                <span class="precio">$ 5.300</span>
+              </div>
+              <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
+            </div>
+          </div>
+        </div>
+        <!-- CONTENEDOR DEL ITEM SELECCIONADO -->
+        <div class="seleccion" id="seleccion">
+          <div class="cerrar" onclick="cerrar()">
+            &#x2715
+          </div>
+          <div class="info">
+            <img src="img/1.png" alt="" id="img">
+            <h2 id="modelo">NIKE MODEL 1</h2>
+            <p id="descripcion">Descripción Modelo 1</p>
+
+            <span class="precio" id="precio">$ 130</span>
+
+            <div class="fila">
+              <div class="size">
+                <label for="">Cantidad</label>
+                <input type="number">
+              </div>
+              <button>AGREGAR AL CARRITO</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
   </div>
 
-  <script src="script.js"></script>
+  <script src="script-productpage.js"></script>
 </body>
 
 </html>
